--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             </div>
             <div class="container px-0">
                 <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                    <a href="index.html" class="navbar-brand"><img src="logo/LOGO WITH OUT BG.png" alt="" style="width: 150px; height: 120px;"></a>
+                    <a href="index.html" class="navbar-brand"><img src="logo/1111.png" alt="" style="object-fit: cover; width: 200px; height: 100px;"></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
@@ -474,9 +474,7 @@
                         <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>FIT 4 KITCHEN</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 my-auto text-center text-md-end " style="color: #45595B; font-size:0px">
-                        <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                        <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                        <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
+                        
                         Designed By <a class="border-bottom" href="https://wexorai.com/" style="color: #45595B; font-size:0px">Wexorai</a> Distributed By <a class="border-bottom" href="https://themewagon.com" style="font-size:0px">ThemeWagon</a>
                     </div>
                 </div>
