--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                     <div class="row g-4">
                         <div class="col-lg-3">
                             
-                    <img src="logo/LOGO WITH OUT BG.png" alt="" style="width: 150px; height: 120px;">
+                    <img src="logo/1111.png" alt="" style="width: 150px; height: 120px;">
                                 <!-- <img src="/logo/bg dark blue 2E2538 yelllow.txt/ " alt="" style="width: 150px; height: 130px;"> -->
                                 <!-- <h1 class="text-primary mb-0">Fruitables</h1>
                                 <p class="text-secondary mb-0">Fresh products</p> -->
