--- a/products.html
+++ b/products.html
@@ -58,7 +58,7 @@
             <div class="container px-0">
                 <nav class="navbar navbar-light bg-white navbar-expand-xl">
                     <a href="index.html" class="navbar-brand"><img src="logo/1111.png" alt="" style="object-fit: cover; width: 200px; height: 100px;"></a>
-                    <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                        <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse" >
@@ -475,7 +475,7 @@
                         <div class="row g-4">
                             <div class="col-lg-3">
                                 
-                        <img src="logo/LOGO WITH OUT BG.png" alt="" style="width: 150px; height: 120px;">
+                        <img src="logo/1111.png" alt="" style="width: 150px; height: 120px;">
                                     <!-- <img src="/logo/bg dark blue 2E2538 yelllow.txt/ " alt="" style="width: 150px; height: 130px;"> -->
                                     <!-- <h1 class="text-primary mb-0">Fruitables</h1>
                                     <p class="text-secondary mb-0">Fresh products</p> -->
