--- a/about.html
+++ b/about.html
@@ -61,9 +61,9 @@
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse" >
                         <div class="navbar-nav mx-auto">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="index.html" class="nav-item nav-link ">Home</a>
                             <a href="products.html" class="nav-item nav-link">Shop</a>
-                            <a href="about.html" class="nav-item nav-link">About Us</a>
+                            <a href="about.html" class="nav-item nav-link active">About Us</a>
                             
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
