--- a/contact.html
+++ b/contact.html
@@ -61,11 +61,11 @@
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse" >
                         <div class="navbar-nav mx-auto">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="index.html" class="nav-item nav-link ">Home</a>
                             <a href="products.html" class="nav-item nav-link">Shop</a>
                             <a href="about.html" class="nav-item nav-link">Shop Detail</a>
                             
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link active">Contact</a>
                         </div>
                         
                     </div>
