--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Navbar start -->
         <div class="container-fluid fixed-top">
-            <div class="container topbar  d-none d-lg-block" style="background-color: #2E2538;">
+            <div class="container topbar bg-primary d-none d-lg-block">
                 <div class="d-flex justify-content-between">
                     <div class="top-info ps-2">
                         <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i> <a href="#" class="text-white">123 Street, New York</a></small>
@@ -62,7 +62,7 @@
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse" >
                         <div class="navbar-nav mx-auto">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="products.html" class="nav-item nav-link">Shop</a>
+                            <a href="products.html" class="nav-item nav-link " >Shop</a>
                             <a href="about.html" class="nav-item nav-link">About Us</a>
                             
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -199,10 +199,10 @@
                 <div class="row g-4 justify-content-center">
                     <div class="col-md-6 col-lg-4">
                         <a href="#">
-                            <div class="service-item bg-secondary rounded border border-secondary">
+                            <div class="service-item bg-primary rounded border border-primary">
                                 <img src="images/new/im3.jpg" class="img-fluid rounded-top w-100" alt="">
                                 <div class="px-4 rounded-bottom">
-                                    <div class="service-content bg-primary text-center p-4 rounded">
+                                    <div class="service-content bg-secondary text-center p-4 rounded">
                                         <h5 class="text-white">OVEN</h5>
                                         <h3 class="mb-0">20% OFF</h3>
                                     </div>
