--- a/about.html
+++ b/about.html
@@ -427,8 +427,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-light mb-3">Why People Like us!</h4>
-                            <p class="mb-4">typesetting, remaining essentially unchanged. It was 
-                                popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.</p>
+                            <p class="mb-4">Step into our showroom and immerse yourself in a world of cutting-edge technology and sleek designs. From kitchen essentials to laundry must-haves, we offer an extensive range of appliances that combine functionality with style, catering to every taste and requirement.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
