--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                         <div id="carouselId" class="carousel slide position-relative" data-bs-ride="carousel">
                             <div class="carousel-inner" role="listbox">
                                 <div class="carousel-item active rounded">
-                                    <img src="images/img61.jpg" class="img-fluid w-100 h-100 bg-secondary rounded" alt="First slide">
+                                    <img src="images/les/btm1.jpg" class="img-fluid w-100 h-100 bg-secondary rounded" alt="First slide">
                                     <a href="#" class="btn px-4 py-2 text-white rounded">OVEN</a>
                                 </div>
                                 <div class="carousel-item rounded">
-                                    <img src="images/img61.jpg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
+                                    <img src="images/les/btm2.jpg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
                                     <a href="#" class="btn px-4 py-2 text-white rounded">OVEN</a>
                                 </div>
                             </div>
@@ -146,7 +146,7 @@
                             </div>
                             <div class="featurs-content text-center">
                                 <h5>Free Shipping</h5>
-                                <p class="mb-0">Free on order over $300</p>
+                                <p class="mb-0">Free on order over $000</p>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                                 <div class="px-4 rounded-bottom">
                                     <div class="service-content bg-secondary text-center p-4 rounded">
                                         <h5 class="text-white">OVEN</h5>
-                                        <h3 class="mb-0">Discount 30$</h3>
+                                        <h3 class="mb-0">Discount 0 0$</h3>
                                     </div>
                                 </div>
                             </div>
@@ -255,7 +255,7 @@
                         <div class="py-4">
                             <h1 class="display-3 text-white">High Quality Equipments</h1>
                             <p class="fw-normal display-3 text-dark mb-4">in Our Store</p>
-                            <p class="mb-4 text-dark">The generated Lorem Ipsum is therefore always free from repetition injected humour, or non-characteristic words etc.</p>
+                            <p class="mb-4 text-dark">Whether you're a seasoned grill master or a novice, having the right equipment can make all the difference in achieving delicious results. </p>
                             <a href="#" class="banner-btn btn border-2 border-white rounded-pill text-dark py-3 px-5">BUY</a>
                         </div>
                     </div>
@@ -282,7 +282,7 @@
             <div class="container py-5 text-center">
                 <div class="text-center mx-auto mb-5" style="max-width: 700px;">
                     <h1 class="display-4">Bestseller Products</h1>
-                    <p>Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.</p>
+                    <p>Each type has its own advantages and unique flavor profiles. Gas grills offer convenience and precise temperature control, while charcoal grills provide that classic smoky flavor.</p>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-6 col-xl-4">
@@ -611,8 +611,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-light mb-3">Why People Like us!</h4>
-                            <p class="mb-4">typesetting, remaining essentially unchanged. It was 
-                                popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.</p>
+                            <p class="mb-4">Step into our showroom and immerse yourself in a world of cutting-edge technology and sleek designs. From kitchen essentials to laundry must-haves, we offer an extensive range of appliances that combine functionality with style, catering to every taste and requirement.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
