--- a/products.html
+++ b/products.html
@@ -65,7 +65,7 @@
                         <div class="navbar-nav mx-auto">
                             <a href="index.html" class="nav-item nav-link ">Home</a>
                             <a href="products.html" class="nav-item nav-link active">Shop</a>
-                            <a href="about.html" class="nav-item nav-link">Shop Detail</a>
+                            <a href="about.html" class="nav-item nav-link">Abour Us</a>
                             
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
@@ -126,22 +126,22 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="d-flex py-2 m-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-2">
-                                        <span class="text-dark" style="width: 130px;">Oven</span>
+                                        <span class="text-dark" style="width: 130px;">Waffle & Toaster</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="d-flex m-2 py-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-3">
-                                        <span class="text-dark" style="width: 130px;">Cooktop</span>
+                                        <span class="text-dark" style="width: 130px;">Juicer</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="d-flex m-2 py-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-4">
-                                        <span class="text-dark" style="width: 130px;">Microwave</span>
+                                        <span class="text-dark" style="width: 130px;">Cooking line</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="d-flex m-2 py-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-5">
-                                        <span class="text-dark" style="width: 130px;">Toaster</span>
+                                        <span class="text-dark" style="width: 130px;">Coffee machine</span>
                                     </a>
                                 </li>
                             </ul>
@@ -155,7 +155,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im1.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/btm2.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Toaster</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -171,7 +171,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im5.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/btm1.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Toaster</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -187,7 +187,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im6.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/3.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Toaster</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -203,7 +203,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im7.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/1 (1).jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Toaster</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -219,7 +219,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im5.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/btm1.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Grill</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -235,7 +235,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im7.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/btm2.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Grill</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -251,7 +251,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im8.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/btm1.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Grill</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -267,7 +267,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im9.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/3.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Grill</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -291,7 +291,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im7.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/3.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Grill</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -307,7 +307,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im6.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/1 (1).jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Grill</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -331,7 +331,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im7.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/btm2.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Grill</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -347,7 +347,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im7.jpg " class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/btm2.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Grill</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -371,7 +371,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im8.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/3.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -387,7 +387,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im9.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/btm1.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">oven</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -411,7 +411,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im5.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/btm2.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Grill</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -427,7 +427,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im7.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/btm1.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Refregeratore</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -443,7 +443,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/new/im8.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/3.jpg" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -501,8 +501,7 @@
                         <div class="col-lg-3 col-md-6">
                             <div class="footer-item">
                                 <h4 class="text-light mb-3">Why People Like us!</h4>
-                                <p class="mb-4">typesetting, remaining essentially unchanged. It was 
-                                    popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.</p>
+                                <p class="mb-4">Step into our showroom and immerse yourself in a world of cutting-edge technology and sleek designs. From kitchen essentials to laundry must-haves, we offer an extensive range of appliances that combine functionality with style, catering to every taste and requirement.</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
