--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
                             <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Vegetable</div>
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Cooking line</h4>
-                                <p>Cooking machine</p>
+                                <p>Experience the vibrant taste and nourishing benefits of freshly  juice with Fit for Kitchen Juicer.</p>
                                 <div class="d-flex justify-content-between flex-lg-wrap">
                                     <p class="text-dark fs-5 fw-bold">$00</p>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
@@ -208,7 +208,7 @@
                             <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Vegetable</div>
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Coffee machine</h4>
-                                <p>Coffe making machine</p>
+                                <p>Awaken your senses and indulge the flavor of the freshly coffee with the Fit for Kitchen Coffee Machine.</p>
                                 <div class="d-flex justify-content-between flex-lg-wrap">
                                     <p class="text-dark fs-5 fw-bold">$00</p>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
@@ -221,8 +221,8 @@
                             </div>
                             <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Vegetable</div>
                             <div class="p-4 pb-0 rounded-bottom">
-                                <h4>grill</h4>
-                                <p>grilling machine</p>
+                                <h4>Cooking Line</h4>
+                                <p>Fit for Kitchen Cooking Line. Designed to inspire creativity and elevate your cooking experience,the kitchen </p>
                                 <div class="d-flex justify-content-between flex-lg-wrap">
                                     <p class="text-dark fs-5 fw-bold">$00</p>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
@@ -231,12 +231,12 @@
                         </div>
                         <div class="border border-primary rounded position-relative vesitable-item">
                             <div class="vesitable-img">
-                                <img src="images/les/btm2.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                <img src="images/les/juicer_new (2) (1).jpg" class="img-fluid w-100 rounded-top" alt="">
                             </div>
                             <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Vegetable</div>
                             <div class="p-4 pb-0 rounded-bottom">
-                                <h4>Toaster</h4>
-                                <p>Veggi Toaster    </p>
+                                <h4>juicer</h4>
+                                <p>Experience the vibrant taste  juice with Fit for Kitchen Juicer.   </p>
                                 <div class="d-flex justify-content-between flex-lg-wrap">
                                     <p class="text-dark fs-5 fw-bold">$00</p>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
@@ -317,7 +317,7 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Its very nice Product
+                                <p class="mb-0">Operating the Fit for Kitchen toaster is a breeze, thanks to its intuitive controls and user-friendly design. Simply select your desired setting, insert your bread, nd let the toaster work its magic.   
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -342,7 +342,7 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0"> Its very good product
+                                <p class="mb-0"> Elevate your breakfast routine with the Fit for Kitchen toaster, a sleek and reliable appliance designed to make your mornings easier and more enjoyable.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -367,7 +367,7 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Very nice product and good service
+                                <p class="mb-0">Experience the refreshing taste of freshly squeezed juice with the Fit for Kitchen Juicer, an indispensable appliance for health-conscious individuals and juice enthusiasts alike.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
