--- a/contact.html
+++ b/contact.html
@@ -63,9 +63,9 @@
                         <div class="navbar-nav mx-auto">
                             <a href="index.html" class="nav-item nav-link ">Home</a>
                             <a href="products.html" class="nav-item nav-link">Shop</a>
-                            <a href="about.html" class="nav-item nav-link">Shop Detail</a>
+                            <a href="about.html" class="nav-item nav-link active">About Us</a>
                             
-                            <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         
                     </div>
