--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-md-12 col-lg-7">
                         <h4 class="mb-3" style="color:  #2E2538;">Smart appliances and Technology</h4>
-                        <h1 class="mb-5 display-3 " style="color:#DCB342 ;">The kitchen is a multifunctional space</h1>
+                        <h1 class="mb-5 display-3 " style="color:#DCB342 ;">The kitchen is a Multifunctional Space</h1>
                         <div class="position-relative mx-auto">
                            <a href="contact.html"><button class="bt form-control border-2 b w-75 py-3 px-4 rounded-pill btn btn-primary border-2 bg-primary py-3 px-4 position-absolute rounded-pill text-white "
                             type="submit" class="" style="top: 0; right: 25%;">Contact Us</button></a> <br>
@@ -112,11 +112,11 @@
                             <div class="carousel-inner" role="listbox">
                                 <div class="carousel-item active rounded">
                                     <img src="images/les/btm1.jpg" class="img-fluid w-100 h-100 bg-secondary rounded" alt="First slide">
-                                    <a href="#" class="btn px-4 py-2 text-white rounded">OVEN</a>
+                                    <a href="#" class="btn px-4 py-2 text-white rounded">Cooking Line</a>
                                 </div>
                                 <div class="carousel-item rounded">
                                     <img src="images/les/btm2.jpg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
-                                    <a href="#" class="btn px-4 py-2 text-white rounded">OVEN</a>
+                                    <a href="#" class="btn px-4 py-2 text-white rounded">Coffee Machine</a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
@@ -226,10 +226,10 @@
                     <div class="col-md-6 col-lg-4">
                         <a href="#">
                             <div class="service-item bg-primary rounded border border-primary">
-                                <img src="images/new/im1.jpg"class="img-fluid rounded-top w-100" alt="">
+                                <img src="images/les/btm2.jpg"class="img-fluid rounded-top w-100" alt="">
                                 <div class="px-4 rounded-bottom">
                                     <div class="service-content bg-secondary text-center p-4 rounded">
-                                        <h5 class="text-white">OVEN</h5>
+                                        <h5 class="text-white">Coffee Machine</h5>
                                         <h3 class="mb-0">Discount 0 0$0</h3>
                                     </div>
                                 </div>
@@ -289,10 +289,10 @@
                         <div class="p-4 rounded bg-light">
                             <div class="row align-items-center">
                                 <div class="col-6">
-                                    <img src="images/new/im5.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    <img src="images/les/letest_walttor.jpg" class="img-fluid rounded-circle w-100" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <a href="#" class="h5">GIll</a>
+                                    <a href="#" class="h5">Waffle & Toaster</a>
                                     <div class="d-flex my-3">
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star text-primary"></i>
@@ -300,7 +300,7 @@
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <h4 class="mb-3">3.12 $0</h4>
+                                    <h4 class="mb-3"> $0</h4>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                 </div>
                             </div>
@@ -310,10 +310,10 @@
                         <div class="p-4 rounded bg-light">
                             <div class="row align-items-center">
                                 <div class="col-6">
-                                    <img src="images/new/im6.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    <img src="images/les/juicer_new.jpg" class="img-fluid rounded-circle w-100" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <a href="#" class="h5">OVEN</a>
+                                    <a href="#" class="h5">Juicer</a>
                                     <div class="d-flex my-3">
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star text-primary"></i>
@@ -321,7 +321,7 @@
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <h4 class="mb-3">3.12 $0</h4>
+                                    <h4 class="mb-3"> $0</h4>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                 </div>
                             </div>
@@ -331,10 +331,10 @@
                         <div class="p-4 rounded bg-light">
                             <div class="row align-items-center">
                                 <div class="col-6">
-                                    <img src="images/new/im7.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    <img src="images/les/btm1.jpg" class="img-fluid rounded-circle w-100" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <a href="#" class="h5">GIll</a>
+                                    <a href="#" class="h5">Cooking Line</a>
                                     <div class="d-flex my-3">
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star text-primary"></i>
@@ -342,7 +342,7 @@
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <h4 class="mb-3">3.12 $0</h4>
+                                    <h4 class="mb-3"> $0</h4>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                 </div>
                             </div>
@@ -352,10 +352,10 @@
                         <div class="p-4 rounded bg-light">
                             <div class="row align-items-center">
                                 <div class="col-6">
-                                    <img src="images/img354.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    <img src="images/les/juicer_new.jpg" class="img-fluid rounded-circle w-100" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <a href="#" class="h5">OVEN</a>
+                                    <a href="#" class="h5">Juicer</a>
                                     <div class="d-flex my-3">
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star text-primary"></i>
@@ -363,7 +363,7 @@
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <h4 class="mb-3">3.12 $0</h4>
+                                    <h4 class="mb-3"> $0</h4>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                 </div>
                             </div>
@@ -373,10 +373,10 @@
                         <div class="p-4 rounded bg-light">
                             <div class="row align-items-center">
                                 <div class="col-6">
-                                    <img src="images/img354.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    <img src="images/les/btm2.jpg" class="img-fluid rounded-circle w-100" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <a href="#" class="h5">GIll</a>
+                                    <a href="#" class="h5">Cooking Line</a>
                                     <div class="d-flex my-3">
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star text-primary"></i>
@@ -384,7 +384,7 @@
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <h4 class="mb-3">3.12 $0</h4>
+                                    <h4 class="mb-3"> $0</h4>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                 </div>
                             </div>
@@ -394,10 +394,10 @@
                         <div class="p-4 rounded bg-light">
                             <div class="row align-items-center">
                                 <div class="col-6">
-                                    <img src="images/new/im8.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    <img src="images/les/letest_walttor.jpg" class="img-fluid rounded-circle w-100" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <a href="#" class="h5">OVEN</a>
+                                    <a href="#" class="h5">Waffle & Toaster</a>
                                     <div class="d-flex my-3">
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star text-primary"></i>
@@ -405,7 +405,7 @@
                                         <i class="fas fa-star text-primary"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <h4 class="mb-3">3.12 $0</h4>
+                                    <h4 class="mb-3"> $0</h4>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                 </div>
                             </div>
@@ -413,9 +413,9 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="text-center">
-                            <img src="images/les/btm2.jpg" class="img-fluid rounded" alt="">
+                            <img src="images/les/juicer_new (2).jpg" class="img-fluid rounded" alt="">
                             <div class="py-4">
-                                <a href="#" class="h5">OVEN</a>
+                                <a href="#" class="h5">Juicer</a>
                                 <div class="d-flex my-3 justify-content-center">
                                     <i class="fas fa-star text-primary"></i>
                                     <i class="fas fa-star text-primary"></i>
@@ -423,16 +423,16 @@
                                     <i class="fas fa-star text-primary"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <h4 class="mb-3">3.12 $0</h4>
+                                <h4 class="mb-3"> $0</h4>
                                 <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="text-center">
-                            <img src="images/les/btm1.jpg" class="img-fluid rounded" alt="">
+                            <img src="images/les/letest_walttor.jpg" class="img-fluid rounded" alt="">
                             <div class="py-4">
-                                <a href="#" class="h5">OVEN<a>
+                                <a href="#" class="h5">Waffle & Toaster<a>
                                 <div class="d-flex my-3 justify-content-center">
                                     <i class="fas fa-star text-primary"></i>
                                     <i class="fas fa-star text-primary"></i>
@@ -440,16 +440,16 @@
                                     <i class="fas fa-star text-primary"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <h4 class="mb-3">3.12 $0</h4>
+                                <h4 class="mb-3"> $0</h4>
                                 <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="text-center">
-                            <img src="images/les/btm2.jpg" class="img-fluid rounded" alt="">
+                            <img src="images/les/cooking line (1).jpg" class="img-fluid rounded" alt="">
                             <div class="py-4">
-                                <a href="#" class="h5">GRILL</a>
+                                <a href="#" class="h5">Cooking line</a>
                                 <div class="d-flex my-3 justify-content-center">
                                     <i class="fas fa-star text-primary"></i>
                                     <i class="fas fa-star text-primary"></i>
@@ -457,16 +457,16 @@
                                     <i class="fas fa-star text-primary"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <h4 class="mb-3">3.12 $0</h4>
+                                <h4 class="mb-3"> $0</h4>
                                 <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="text-center">
-                            <img src="images/les/btm1.jpg" class="img-fluid rounded" alt="">
+                            <img src="images/les/coffee machine (1).jpg" class="img-fluid rounded" alt="">
                             <div class="py-2">
-                                <a href="#" class="h5">OVEN</a>
+                                <a href="#" class="h5">Coffee Machine</a>
                                 <div class="d-flex my-3 justify-content-center">
                                     <i class="fas fa-star text-primary"></i>
                                     <i class="fas fa-star text-primary"></i>
@@ -474,7 +474,7 @@
                                     <i class="fas fa-star text-primary"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <h4 class="mb-3">3.12 $0</h4>
+                                <h4 class="mb-3"> $0</h4>
                                 <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                             </div>
                         </div>
@@ -503,7 +503,7 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Its very nice Product
+                                <p class="mb-0">Operating the Fit for Kitchen toaster is a breeze, thanks to its intuitive controls and user-friendly design. Simply select your desired setting, insert your bread, nd let the toaster work its magic.   
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -528,7 +528,7 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0"> Its very good product
+                                <p class="mb-0"> Elevate your breakfast routine with the Fit for Kitchen toaster, a sleek and reliable appliance designed to make your mornings easier and more enjoyable.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -553,7 +553,7 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Very nice product and good service
+                                <p class="mb-0">Experience the refreshing taste of freshly squeezed juice with the Fit for Kitchen Juicer, an indispensable appliance for health-conscious individuals and juice enthusiasts alike.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -651,7 +651,7 @@
                 </div>
             </div>
         </div>
-        <!-- Footer End -->
+        <!-- Footer End --
 
         <!-- Copyright Start -->
         <div class="container-fluid copyright bg-dark py-4">
