--- a/about.html
+++ b/about.html
@@ -98,12 +98,12 @@
 
 
         <!-- Single Page Header start -->
-        <div class="container-fluid page-header py-5">
-            <h1 class="text-center text-white display-6">About Us</h1>
+        <div class="container-fluid page-header py-5" style="background-image: url(/images/banner.jpg);">
+            <h1 class="text-center text-secondary display-6">About Us</h1>
             <ol class="breadcrumb justify-content-center mb-0">
                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                 <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                <li class="breadcrumb-item active text-white">Shop Detail</li>
+                <li class="breadcrumb-item active text-secondary">About</li>
             </ol>
         </div>
         <!-- Single Page Header End -->
@@ -197,8 +197,8 @@
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Plantery Mixer</h4>
                                 <p>The cornerstone of professional kitchen operations. Designed for precision and efficiency, this mixer.</p>
-                                <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
-                                    <!-- <p class="text-dark fs-5 fw-bold">$00</p> -->
+                                <div class="d-flex justify-content-between flex-lg-wrap" style="margin-bottom: 10px;">
+                                    <!-- <p class="text-dark fs-5 fw-bold">$00</p>   -->
                                     <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
                             </div>
