--- a/products.html
+++ b/products.html
@@ -99,12 +99,12 @@
 
 
         <!-- Single Page Header start -->
-        <div class="container-fluid page-header py-5">
-            <h1 class="text-center text-white display-6">Shop</h1>
+        <div class="container-fluid page-header py-5" style="background-image: url(/images/banner.jpg);">
+            <h1 class="text-center text-secondary display-6">Shop</h1>
             <ol class="breadcrumb justify-content-center mb-0">
                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                 <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                <li class="breadcrumb-item active text-white">Shop</li>
+                <li class="breadcrumb-item active text-secondary    ">Shop</li>
             </ol>
         </div>
         <!-- Single Page Header End -->
