--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                                 <img src="images/new/im3.jpg" class="img-fluid rounded-top w-100" alt="">
                                 <div class="px-4 rounded-bottom">
                                     <div class="service-content bg-secondary text-center p-4 rounded">
-                                        <h5 class="text-white">OVEN</h5>
-                                        <h3 class="mb-0">20% OFF</h3>
+                                        <!-- <h5 class="text-white">OVEN</h5> -->
+                                        <h3 class="mb-0">Backery Line</h3>
                                     </div>
                                 </div>
                             </div>
@@ -220,8 +220,8 @@
                                 <img src="images/new/im4.jpg" class="img-fluid rounded-top w-100" alt="">
                                 <div class="px-4 rounded-bottom">
                                     <div class="service-content bg-light text-center p-4 rounded">
-                                        <h5 class="text-primary">GRILL</h5>
-                                        <h3 class="mb-0">Free delivery</h3>
+                                        <!-- <h5 class="text-primary">GRILL</h5> -->
+                                        <h3 class="mb-0">Oven Line</h3>
                                     </div>
                                 </div>
                             </div>
@@ -233,8 +233,8 @@
                                 <img src="images/les/btm2.jpg"class="img-fluid rounded-top w-100" alt="">
                                 <div class="px-4 rounded-bottom">
                                     <div class="service-content bg-secondary text-center p-4 rounded">
-                                        <h5 class="text-white">Coffee Machine</h5>
-                                        <h3 class="mb-0">Discount 0 0$0</h3>
+                                        <!-- <h5 class="text-white">Coffee Machine</h5> -->
+                                        <h3 class="mb-0">Preparation Line</h3>
                                     </div>
                                 </div>
                             </div>
@@ -266,13 +266,13 @@
                     <div class="col-lg-6">
                         <div class="position-relative">
                             <img src="images/new/im3.jpg" class="img-fluid w-100 rounded" alt="">
-                            <div class="d-flex align-items-center justify-content-center bg-white rounded-circle position-absolute" style="width: 140px; height: 140px; top: 0; left: 0;">
+                            <!-- <div class="d-flex align-items-center justify-content-center bg-white rounded-circle position-absolute" style="width: 140px; height: 140px; top: 0; left: 0;">
                                 <h1 style="font-size: 100px;">1</h1>
                                 <div class="d-flex flex-column">
                                     <span class="h2 mb-0">50$0</span>
                                     <span class="h4 text-muted mb-0">kg</span>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
