--- a/contact.html
+++ b/contact.html
@@ -136,31 +136,39 @@
                                 <button class="w-100 btn form-control border-secondary py-3 bg-white text-primary " type="submit">Submit</button>
                             </form>
                         </div>
-                        <div class="col-lg-5">
-                            <div class="d-flex p-4 rounded mb-4 bg-white">
-                                <i class="fas fa-map-marker-alt fa-2x text-primary me-4"></i>
-                                <div>
-                                    <h4>Address</h4>
-                                    <p class="mb-2">Shams business center,Sharjha media city Sharjah UAE </p>
+                        
+                                <div class="col-lg-5">
+                                    <div class="d-flex flex-column mb-4 bg-white rounded">
+                                        <div class="p-4">
+                                            <i class="fas fa-map-marker-alt fa-2x text-primary me-4"></i>
+                                            <div>
+                                                <h4>Address</h4>
+                                                <p class="mb-2">Shams business center, Sharjah media city, Sharjah, UAE</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex flex-column mb-4 bg-white rounded">
+                                        <div class="p-4">
+                                            <i class="fas fa-envelope fa-2x text-primary me-4"></i>
+                                            <div>
+                                                <h4>Mail Us</h4>
+                                                <p class="mb-2">info@fit4kitchen.in</p>
+                                                <p class="mb-2">sales@fit4kitchen.in</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex flex-column bg-white rounded">
+                                        <div class="p-4">
+                                            <i class="fa fa-phone-alt fa-2x text-primary me-4"></i>
+                                            <div>
+                                                <h4>Telephone</h4>
+                                                <p class="mb-2">+971 58 290 8151</p>
+                                                <p class="mb-2">+971 56 479 8242</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="d-flex p-4 rounded mb-4 bg-white">
-                                <i class="fas fa-envelope fa-2x text-primary me-4"></i>
-                                <div>
-                                    <h4>Mail Us</h4>
-                                    <p class="mb-2"> info@fit4kitchen.in</p>
-                                    <p class="mb-2"> sales@fit4kitchen.in</p>
-                                </div>
-                            </div>
-                            <div class="d-flex p-4 rounded bg-white">
-                                <i class="fa fa-phone-alt fa-2x text-primary me-4"></i>
-                                <div>
-                                    <h4>Telephone</h4>
-                                    <p class="mb-2"> +971 58 290 8151</p>
-                                    <p class="mb-2"> +971 56 479 8242</p>
-                                </div>
-                            </div>
-                        </div>
+                           
                     </div>
                 </div>
             </div>
